--- a/src/assets/notes/10.Reudx.md
+++ b/src/assets/notes/10.Reudx.md
@@ -1,5 +1,7 @@
 ## Redux
 [Redux 入门](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html)  
+>Redux的核心概念其实很简单：将需要修改的state都存入到store里，发起一个action用来描述发生了什么，用reducers描述action如何改变state tree 。创建store的时候需要传入reducer，真正能改变store中数据的是store.dispatch API。
+
 > - store 必须唯一    
 > - 只有 store 能改变自己的内容， Reducer 不能改变    
 > - Reducer 必须纯函数    
@@ -49,7 +51,7 @@ export default store;
   }
 ```
 #### 2. reducer
-> Store 收到 Action 以后，必须给出一个新的 State，这样 View 才会发生变化。这种 State 的计算过程就叫做 Reducer。     
+> Reducer 会接收到action的信息。将会进行状态（数据）的处理,   
 > Reducer 是一个函数，它接受 Action 和当前 State 作为参数，返回一个新的 State。   
 
 ```js
@@ -79,6 +81,32 @@ export default (state = defaultState, action) => {
       return state;
   }
 }
+```
+##### 如果有多个reducer ，可以使用combineReducers方法将其合并，并暴露出去。
+```js
+//包含n个reducer函数的模块
+import {ADDNAME, ADDAGE} from './action-type'
+import {combineReducers} from 'redux'
+function addName(state='initRedux',action){ //形参默认值
+    switch(action.type){
+        case ADDNAME:
+            return action.data
+        default:
+            return state
+    }
+}
+function addAge(state=0,action){
+    switch(action.type){
+        case ADDAGE:
+            return action.data
+        default:
+            return state
+    }
+}
+
+export const finalReducer = combineReducers({
+    addName,addAge
+})
 ```
 #### 3. Action
 > **Action 就是 View 发出的通知，表示 State 应该要发生变化了**  
