--- a/src/assets/notes/11.React-redux.md
+++ b/src/assets/notes/11.React-redux.md
@@ -1,5 +1,135 @@
 ## react-redux的使用
 
-#### 1.Provider
+> - Provider是一个由react-redux提供的组件,用于接收store的数据,供内部组件暴露的一个接口  
+> - connect是react-redux库提供的一个函数,用于连接UI组件的,并且最终生成一个容器组件,提供了一些映射方法,mapStateToProps以及mapDispatchToProps   
+> - 在UI组件内部的数据通过this.props来填充渲染  
+> - 参考文章： 
+>   - [react-redux的使用](https://www.jianshu.com/p/3c87f36759d8)  
+>   - [react-redux](https://jspang.com/detailed?id=48#toc273)
+ 
 
-> **react-redux** 给我们提供了一个 **Provider** 组件，我们可以把这个组件写在最外层，这样被 **Provider** 包裹的所有组件都可以通过 **props** 来获取 **state** ，无论组个组件藏得多么深。 **Provider 组件只接受一个属性，那就是 store**
+#### 1. UI组件（傻瓜组件/无状态组件）
+
+- UI 组件有以下几个特征
+  - 只负责 UI 的呈现，不带有任何业务逻辑,  
+  - 没有状态,UI的渲染通过外部的props传入（即不使用this.state这个变量)  
+  - 所有数据都由参数（this.props）对象提供  
+  - 不使用任何 Redux 的 API  
+
+```js
+// UI组件（傻瓜组件/无状态组件）
+// MusicListUI.jsx
+import React, { Component } from 'react';
+import {Input, Button,List} from 'antd'
+class MusicListUI extends Component {
+  constructor(props) {
+    super(props)
+    this.state = {
+
+    }
+  }
+  render() {
+    return (
+      <div style={{ margin: '10px' }}>
+        <div>
+          <Input
+            placeholder={this.props.inputValue}
+            style={{ width: '250px', marginRight: '10px' }}
+            onChange={this.props.changeInputValue}
+            value={this.props.inputValue}
+          />
+          <Button
+            type="primary"
+            onClick={this.props.clickBtn}
+          >增加</Button>
+        </div>
+        <div style={{ margin: '10px 0', width: '323px' }}>
+          <List
+            bordered
+            dataSource={this.props.list}
+            renderItem={
+              (item, index) =>
+               <List.Item onClick={()=>this.props.deleteItem(index)}>{item}</List.Item>
+            }
+          />
+        </div>
+      </div>
+    );
+  }
+}
+
+export default MusicListUI;
+```
+
+#### 2. 容器组件(聪明组件) 
+  
+  - 容器组件的特征与UI组件相反  
+    - 负责管理数据和业务逻辑，不负责 UI 的呈现  
+    - 带有内部状态(state）  
+    - 使用 Redux 的 API(下面会有具体的例子),比如:dispatch,getState,subscribe等  
+    - 总之：UI 组件负责 UI 的呈现，容器组件负责管理数据和逻辑。  
+    
+```js
+  // 组件容器
+  // index.js
+  <div className="demo">
+    <MusicListUI 
+      inputMusic={this.state.inputMusic}
+      musicList={this.state.musicList}
+      changeinputMusic={this.changeinputMusic}
+      clickBtn={this.clickBtn}
+      deleteItem={this.deleteItem}/>
+  </div>
+```
+
+#### 3. Provider
+
+- **react-redux** 给我们提供了一个 **Provider** 组件，我们可以把这个组件写在最外层，这样被 **Provider** 包裹的所有组件都可以通过 **props** 来获取 **state** ，无论组个组件藏得多么深。 
+- **Provider 组件只接受一个属性，那就是 store**
+
+```js
+// src/index.js
+import React from 'react'
+import ReactDOM from 'react-dom'
+import App from './App'
+
+// react-redux给我们提供了一个Provider组件,Provider包裹的所有组件都可以通过props来获取state
+// Provider组件只接受一个属性，那就是store
+import { Provider } from 'react-redux'
+import store from '@/store'
+
+ReactDOM.render(
+    <Provider store={store}>
+        <App/>
+    </Provider>, 
+    document.querySelector('#root'));
+```
+
+
+#### 4. connect
+- 2.1 **connect** 用来获取 **state** 和 **action** 的   
+  - connect 的作用是把UI组件（无状态组件）和业务逻辑代码的分开,通过connect再链接到一起，让代码更加清晰和易于维护
+  - 是react-redux提供的一个方法
+
+- **connect** 接受两个参数，
+  - **mapStateToProps** 它可以筛选 **state**，
+  - **mapDispatchToProps** 可以筛选 **action**。
+
+- 2.2 两次执行过程
+  - 第一次 **connect** 函数的执行是从 react-redux 库中引入这个方法
+  - 第二次把 **connect** 函数返回的函数再次执行,最后产生的就是容器组件
+
+```js
+// 参数1: 返回了我们需要的state
+function mapStateToProps(state) {
+  return ()
+}
+
+// 参数2： 返回了我们需要的 action 创建函数
+function actionCreators() {
+  return {}
+}
+
+```
+
+
