--- a/src/assets/notes/01.环境搭建.md
+++ b/src/assets/notes/01.环境搭建.md
@@ -1,12 +1,17 @@
 
-1. React 16.x
-1. react-router-dom 5.x  
-1. react-rudex/redux
-1. react-markodwn  
-1. axios 
-1. antd  
-1. http-proxy-middleware 配置代理
-1. mokejs
+01. 搭建
+02. 基本语法( jsx语法、className、style、img)  Base
+03. 事件对象
+04. 双向数据
+05. 表单处理
+06. DOM节点
+07. 生命周期
+08. 组件通信
+09. 路由配置
+10. 状态管理（redux）
+  - redux
+  - react-redux
+  - react-thunk 
 
 
 #### 1. 创建项目
@@ -56,10 +61,12 @@
   - [react引入渲染markdown文件](https://blog.csdn.net/M_Eve/article/details/105614726)
 
 #### 11. redux react-redux redux-saga redux-thunk
+[Redux:中间件与异步操作](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_two_async_operations.html)
   - cnpm install --save redux
   - cnpm install --save react-redux
-  - cnpm install --save redux-thunk
-  - cnpm install --save redux-saga
+  - cnpm install --save redux-thunk  中间件
+  - cnpm install --save redux-saga  中间件
+  - redux-promise 中间件
   
 
 
