--- a/src/assets/notes/10.状态管理（redux）/1.Reudx.md
+++ b/src/assets/notes/10.状态管理（redux）/1.Reudx.md
@@ -1,5 +1,8 @@
 ## Redux
-[Redux 入门](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html)  
+- 参考：
+  - [Redux 入门-阮一峰](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html)   
+  - [Redux免费视频教程](https://jspang.com/detailed?id=48#toc266)  
+
 >Redux的核心概念其实很简单：将需要修改的state都存入到store里，发起一个action用来描述发生了什么，用reducers描述action如何改变state tree 。创建store的时候需要传入reducer，真正能改变store中数据的是store.dispatch API。
 
 > - store 必须唯一    
@@ -51,8 +54,8 @@ export default store;
   }
 ```
 #### 2. reducer
-> Reducer 会接收到action的信息。将会进行状态（数据）的处理,   
-> Reducer 是一个函数，它接受 Action 和当前 State 作为参数，返回一个新的 State。   
+> Reducer 纯函数，只承担计算 State 的功能，不合适承担其他功能，也承担不了  
+> Reducer 接受 Action 和 当前 State 作为参数，返回一个新的 State。   
 
 ```js
 import {ADD_BOOK_LIST, DEL_BOOK_ITEM} from './actionTypes'
@@ -109,9 +112,10 @@ export const finalReducer = combineReducers({
 })
 ```
 #### 3. Action
-> **Action 就是 View 发出的通知，表示 State 应该要发生变化了**  
-> State 的变化，会导致 View 的变化。但是，用户接触不到 State，只能接触到 View。所以，State 的变化必须是 View 导致的。  
-> **Action 是一个对象**。其中的**type**属性是必须的，表示 Action 的名称。其他属性可以自由设置  
+- **Action 就是 View 发出的通知，表示 State 应该要发生变化了**  
+- State 的变化，会导致 View 的变化。但是，用户接触不到 State，只能接触到 View。所以，State 的变化必须是 View 导致的。  
+- **Action 存放数据的对象，即消息的载体，只能被别人操作，自己不能进行任何操作。**。
+- 参数：其中的**type**属性是必须的，表示 Action 的名称。其他属性可以自由设置  
 
 ```js
   // Action 的名称是ADD_TODO，它携带的信息是字符串Learn Redux
