--- a/src/assets/notes/10.状态管理（redux）/2.React-redux.md
+++ b/src/assets/notes/10.状态管理（redux）/2.React-redux.md
@@ -111,25 +111,117 @@ ReactDOM.render(
   - connect 的作用是把UI组件（无状态组件）和业务逻辑代码的分开,通过connect再链接到一起，让代码更加清晰和易于维护
   - 是react-redux提供的一个方法
 
-- **connect** 接受两个参数，
-  - **mapStateToProps** 它可以筛选 **state**，
-  - **mapDispatchToProps** 可以筛选 **action**。
+- 2.2 **mapStateToProps** 
+  - 是一个函数。作用建立一个从（外部的）state对象到（UI 组件的）props对象的映射关系。
+  - 返回一个对象，里面的每一个键值对就是一个映射；
+  - **会订阅 Store，每当state更新的时候，就会自动执行，重新计算 UI 组件的参数，从而触发 UI 组件的重新渲染。**
 
-- 2.2 两次执行过程
-  - 第一次 **connect** 函数的执行是从 react-redux 库中引入这个方法
-  - 第二次把 **connect** 函数返回的函数再次执行,最后产生的就是容器组件
+- 2.3 **mapDispatchToProps** 
+  - 是 connect 函数的第二个参数，用来**建立 UI 组件的参数到store.dispatch方法的映射**。
+  - 可以是一个函数，也可以是一个对象
+    - 如果是一个函数，会得到 dispatch 和 props（容器组件的props对象）两个参数。
+    - 如果是一个对象，它的每个键名也是对应 UI 组件的同名参数，键值应该是一个函数，会被当作 Action creator ，返回的 Action 会由 Redux 自动发出
 
-```js
-// 参数1: 返回了我们需要的state
-function mapStateToProps(state) {
-  return ()
-}
+  ```js
+    // 是一个函数
+      const mapDispatchToProps = ( dispatch,ownProps) => {
+        return {
+          onClick: () => {
+            dispatch({
+              type: 'SET_VISIBILITY_FILTER',
+              filter: ownProps.filter
+            });
+          }
+        };
+      }
 
-// 参数2： 返回了我们需要的 action 创建函数
-function actionCreators() {
-  return {}
-}
+    // 是一个对象
+    const mapDispatchToProps = {
+      onClick: (filter) => {
+        type: 'SET_VISIBILITY_FILTER',
+        filter: filter
+      };
+    }
+  ```
 
-```
+
+  ```js
+  // musicListUI.jsx
+  
+  import React,{Component} from 'react';
+  import {connect} from 'react-redux'
+  import { CHANGE_MUSIC_INP,ADD_MUSIC_LIST,DEL_MUSIC_ITEM } from '@/store/actionTypes';
+
+  import {Input, Button, List} from 'antd'
+
+  // -----------UI组件 start------------
+  class MusicList extends Component {
+    render() {
+      console.log(this.props)
+      const {inputMusic, list, clickBtn, inputChange, deleteItem} = this.props;
+      return (
+        <div style={{ margin: '10px' }}>
+          <div>
+            <Input placeholder={inputMusic} style={{ width: '250px', marginRight: '10px' }}
+              onChange={inputChange} value={inputMusic} />
+            <Button type="primary" onClick={clickBtn}>增加</Button>
+          </div>
+          <div style={{ margin: '10px 0', width: '323px' }}>
+            <List bordered dataSource={list}
+              renderItem={
+                (item, index) =>
+                  <List.Item onClick={() => deleteItem(index)}>{item}</List.Item>
+              }
+            />
+          </div>
+        </div>
+      )
+    }
+  }
+  // -----------UI组件 end------------
+
+  // ----------业务逻辑代码 start -----
+  const mapStateToProps = (state) => {
+    const {music} = state
+    return {
+      inputMusic: music.inputMusic,
+      list: music.musicList
+    }
+  }
+
+  const mapDispatchToProps = (dispatch, props) => {
+    return {
+      // 输入
+      inputChange(e){
+        dispatch({
+          type: CHANGE_MUSIC_INP,
+          value: e.target.value
+        })
+      },
+
+      // 添加
+      clickBtn(){
+        dispatch({
+          type: ADD_MUSIC_LIST
+        })
+      },
+
+      // 删除
+      deleteItem(index){
+        dispatch({
+          type: DEL_MUSIC_ITEM,
+          index
+        })
+      }
+
+    }
+  }
+  // ----------业务逻辑代码 end -----
+
+  export default connect(mapStateToProps,mapDispatchToProps)(MusicList);
+  //  connect 的作用是把UI组件（无状态组件）和业务逻辑代码的分开，
+  // 然后通过connect再链接到一起，让代码更加清晰和易于维护。
+  // 这也是React-Redux最大的有点。
+  ```
 
 
