--- a/src/assets/notes/10.状态管理（redux）/3.Redux-thunk.md
+++ b/src/assets/notes/10.状态管理（redux）/3.Redux-thunk.md
@@ -1,5 +1,6 @@
 ## Redux-thunk
 
+[bindActionCreators作用](https://www.cnblogs.com/eret9616/p/9980518.html)  
 
 #### 1. 中间件
 - dispatch 一个 action之后，到达 reducer 之前，进行一些额外的操作，就需要用到middleware。你可以利用 Redux middleware 来进行日志记录、创建崩溃报告、调用异步接口或者路由等等。
